Added test cases and fixed some bugs. Current coverage is 73%.